--- a/css/styles.css
+++ b/css/styles.css
@@ -2689,4 +2689,52 @@ button:focus {
   outline: none;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+#index h1 {
+  font-size: 4em;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10vh;
+}
+#index ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80vw;
+  height: 50vh;
+}
+#index ul li {
+  width: 18%;
+  height: 80px;
+  display: flex;
+}
+#index ul li a {
+  background-color: #c7bbbb;
+  border-radius: 8px;
+  color: #162b85;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 12px;
+  width: 100%;
+  display: block;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #111;
+  font-size: 1.2em;
+}
+#index ul li a:hover {
+  background-color: #111;
+  color: #c7bbbb;
+}
+
 /*# sourceMappingURL=styles.css.map */
