--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,7 @@
-@import "about.scss";
+@import "about_us.scss";
 @import "home.scss";
 @import "room_grid.scss";
 @import "contact_us.scss";
-@import "contact.scss";
 @import "reservation.scss";
 
 
