--- a/scss/_general_properties.scss
+++ b/scss/_general_properties.scss
@@ -7,6 +7,8 @@
    margin: 0;
    font-size: 1em;
    font-family: 'Roboto', sans-serif;
+   position: relative;
+   z-index: 2;
 //    font-family: 'Old Standard TT', serif;
 }
 
@@ -81,7 +83,7 @@ ul{
     }
 
     &.button_brown{
-        background-color: $brown;    
+        background-color: $brown;  
     }
    
     &.button_grey{
@@ -110,14 +112,27 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    z-index: 999;
+    @media only screen and (min-width: $desktop) {
+        padding: 10px 20px;
+        width: 100%;
+        margin: 0;
+    }
  
     nav{
-        position: relative;  
+        position: relative;
+        // width: 50%;
+        @media only screen and (min-width: $desktop) {
+            width: 100%;
+        }
 
         .bars{
             i{
                 font-size: 2em;
                 display: block;
+                @media only screen and (min-width: $desktop) {
+                    display: none;
+                }
             }
         }
 
@@ -131,6 +146,18 @@ header{
             padding: 15% 20px;
             overflow-x: hidden;
             width: 0;
+            @media only screen and (min-width: $desktop) {
+                visibility: visible;
+                position: relative;
+                display: flex;
+                top: 0;
+                left: 0;
+                width: 100%;
+                font-size: .9em;
+                padding: 0;
+                background-color: $grey_dark;
+                color: #fff;
+            }
 
             &.active{
                 visibility: visible;
@@ -140,7 +167,10 @@ header{
                 transition: 0.4s;      
                 overflow-x: visible; 
                 width: 95vw;
-
+                @media only screen and (min-width: $desktop) {
+                    visibility: hidden;
+                    width: 0vw;
+                }
             }
 
             ul{
@@ -151,6 +181,11 @@ header{
                 width: 0;     
                 overflow: hidden;
                 list-style-type: none; 
+                @media only screen and (min-width: $desktop) {
+                    flex-direction: row;
+                    overflow: hidden;
+                    width: 40%;
+                }
     
                 &.active{
                     overflow: auto;
@@ -161,13 +196,56 @@ header{
                 li{
                     background-color: $brown;
                     width: 100%;             
-                    margin-top: 10px;       
+                    margin-top: 10px;     
+                    @media only screen and (min-width: $desktop) {
+                        width: 100%;
+                        background-color: transparent !important;
+                        margin: 0;
+                        width: 20%;
+                        font-size: .7em;
+                    }
                     
                     a{
+                        background-color: transparent !important;
                         width: 100%;
                         padding: 12px 30px;
                         display: block;
+                        @media only screen and (min-width: $desktop) {
+                            margin: 0 !important;
+                            padding: 15px 10px !important;
+                            height: 100%;
+                            text-align: center;
+                            border-radius: 8px;
+
+                            &:hover{
+                                background-color: $grey !important;
+                            }
+                        }
                     }
+                }
+            }
+
+            .container_logoH_nav{
+                letter-spacing: 2px;
+                font-size: 26px;        
+                display: none;
+                // margin-left: auto;
+                // margin-right: auto;
+                @media only screen and (min-width: $desktop) {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 30%;
+                }
+         
+                .logoH{
+                    font-size: 40px;
+                    font-weight: bold;
+                    padding: 8px 14px;
+                    background-color: #fff;
+                    color: $grey_dark;
+                    text-align: center;
+                    margin-right: 15px;
                 }
             }
         }
@@ -181,19 +259,67 @@ header{
             width: 100%;
             margin-top: 30px;
             font-size: 1.5em;
+            @media only screen and (min-width: $desktop) {
+                color: #fff;
+                flex-direction: row;
+                width: 30%;
+                font-size: 1.2em;
 
-            .info_ontainer{
+                .container_headerInfo_phone, .container_headerInfo_email{
+                    display: flex;
+                    
+                    &:first-child{
+                        margin-right: 20px;
+                    }
+                }
+                
+                .fakeIcon{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: relative;
+                    border-radius: 6px;
+                    width: 24px;
+                    height: 24px;
+                    // border: 1px solid red;
+                    background-color: $brown;
+                    margin-right: 12px;
+                    margin-top: 10px;
+        
+                    .fakeIcon_top{
+                        position: absolute;
+                    }
+                }
+                
+                .info{
+                    div:first-child{
+                        margin-bottom: 2.5px;
+                    }
+                }
+            }
+
+            .info_container{
                 display: flex;
+                flex-direction: row-reverse;
                 margin-bottom: 20px;
 
                 .info{
                     margin-right: 20px;
+
+                    .title{
+                        font-size: 1em;
+                        margin-bottom: 6px;
+                    }
+
+                    .data{
+                        font-size: .75em;
+                    }
                 }
             }
-        }
+        }   
         
         
-    }
+    }// nav
  
     .container_logoH{
         letter-spacing: 2px;
@@ -203,6 +329,9 @@ header{
         align-items: center;
         // margin-left: auto;
         // margin-right: auto;
+        @media only screen and (min-width: $desktop) {
+            display: none;
+        }
  
         .logoH{
             font-size: 40px;
@@ -260,8 +389,14 @@ footer{
     width: 100%;
     padding: 15px;
     letter-spacing: 2px;
-    text-transform: uppercase;
-
+    text-transform: uppercase; 
+    @media only screen and (min-width: $desktop) {
+        height: fit-content;
+        font-size: 1.5em;
+        flex-wrap: wrap;
+        padding: 100px 50px 75px 50px;
+        margin-top: 120px;
+    }
 
     .copy{
         font-size: 0.7em;
@@ -269,10 +404,126 @@ footer{
         padding-right: 20px;
     }
 
+    .body{
+        display: none;
+        width: 100%;
+        font-size: 0.55em;
+
+        .logo_section{
+            width: 22.5%;
+            line-height: 2;
+            margin-right: 5%;
+
+            .logo_title{
+                display: flex;
+                margin-bottom: 40px;
+                
+                .logo{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0px 25px;
+                    background-color: $brown;
+                    color: #fff;   
+                    height: 80px;
+                    margin-right: 20px;  
+                    font-size: 2.5em;       
+                    font-weight: bold;
+                }
+
+                .title{
+                    font-size: 2em;
+                    span{
+                        display: block;
+                        font-weight: bold;
+                    }
+                }
+            }
+        }
+
+        .services_section{        
+            width: 50%;
+
+            ul{
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                height: 25vh;
+                width: 100%;
+
+                li{
+                    margin-bottom: 30px;
+
+                    span{
+                        margin-right: 5px;
+                    }
+
+                    &:last-child{
+                        margin-bottom: 0;
+                    }
+                }
+            }
+
+            .title{
+                margin-bottom: 30px;
+                font-size: 1.9em;
+                text-transform: none;
+            }
+        }
+
+        .contactUs_section{
+
+            & > .title{
+                margin-bottom: 30px;
+                font-size: 1.9em;
+                text-transform: none;
+            }
+
+            .contacts{
+                display: flex;       
+                flex-direction: column;
+                justify-content: space-between;        
+
+                .contact{
+                    display: flex;
+                    margin-bottom: 50px;
+
+                    .icon{
+                        color: $brown;
+                        font-size: 3em;
+                        margin-right: 20px;
+                    }
+
+                    .info_container{
+
+                        .title{
+                            margin: 0;
+                            margin-bottom: 10px;
+                            text-transform: none;
+                            font-size: 1.4em;
+                        }
+
+                        .title{
+                            font-size: 1.2em;
+                        }
+                    }
+                }
+            }
+        }
+
+        @media only screen and (min-width: $desktop) {
+            display: flex;           
+        }
+    }
+    
     .rrss{
         display: flex;       
         width: 56%;
         font-size: 1.2em;
+        @media only screen and (min-width: $desktop) {
+            font-size: 1.5em;
+            width: 30%;
+        }
 
         div{
             display: flex;
@@ -283,6 +534,10 @@ footer{
             flex: 1;
             width: 20%;
             height: 40px;
+            cursor: pointer;
+            @media only screen and (min-width: $desktop) {
+                height: 70px;
+            }
 
             &:hover{
                 background-color: $brown;
