--- a/scss/room_grid.scss
+++ b/scss/room_grid.scss
@@ -8,6 +8,7 @@
       background-image: url("../img/home2.jpg");
       background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url("../img/home2.jpg");
       background-size: cover;
+      position: relative;
       flex-flow: column;
       height: 175px;
       justify-content: space-between;
@@ -18,14 +19,19 @@
       padding-left: 7%;
       text-transform: capitalize;
       margin-bottom: 30px;
+      z-index: 1;
+      @media only screen and (min-width: $desktop) {
+         height: 35vh;
+         padding: 5% 10% 3% 10%;
+         font-size: 1.7em;
+         margin: 0;
+         margin-bottom: 120px;
+      }
 
       .title{
          font-family: 'Old Standard TT', serif;
-         // background-color: #fff;
          color: $grey_dark;
-
          color: #fff;
-
          font-size: 2.4em;
          margin-bottom: 30px;
          padding: 2px;
@@ -38,97 +44,149 @@
          margin-bottom: 5px;
       }
 
+      .secondary_nav{
+         position: absolute;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         padding: 10px 30px;
+         height: 50px;
+         background-color: #fff;
+         bottom: 0;
+         left: 75%;
+         font-size: .6em;
+         font-weight: bold;
+
+         div{
+            color: $black_std;
+            a{
+               color: $brown;
+            }
+
+            span{
+               a{
+                  color: $black_std;
+               }
+            }
+         }
+      }
    }
 
-   .rooms{
+   .mainContent_body{
+      @media only screen and (min-width: $desktop) {
+         width: 70vw;
+         margin-left: auto;
+         margin-right: auto;
+      }
 
-      .room{
-         display: flex;
-         justify-content: space-between;
-         flex-wrap: wrap;
-         margin-bottom: 20px;
-
-         .room_img{
-            height: 225px;
-            width: 100%;
-            background-size: cover;           
-         }
-
-         &:nth-child(1){
-            .room_img{
-               background-image: url("../img/random_room1.jpg");
-            }    
-         }
-
-         &:nth-child(2){
-            .room_img{
-               background-image: url("../img/random_room2.jpg");
-            }   
-         }
-
-         .room_body{
-            width: 65%;
-
-            .icon_list{
-
-               ul{
-                  width: 85%;
-                  display: flex;
-                  justify-content: space-between;
-                  padding: 6px 15px;
-                  box-shadow: 10px 10px 31px -12px rgba(0,0,0,0.5);
-                  color: $grey;
-                  font-size: 0.8em;
-               }
-            }
-
-            .body_info{
-               padding: 10px;
-
-               .title{
-                  font-size: 1.1em;
-                  font-family: 'Old Standard TT', serif;
-                  margin: 10px 0;
-               }
-
-               p{
-                  text-align: justify;
-                  font-size: 0.7em;
-               }
-            }
-            
-         }
-
-         .extra_info{
-            width: 34%;
+      .rooms{
+         @media only screen and (min-width: $desktop) {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            overflow: auto;
-            padding: 40px 10px 0 10px;
-            
-            .price{
-               color: $brown;
-               font-size: 1.2em;
-               font-weight: bold;
+            flex-wrap: wrap;
+            justify-content: space-between;
+         }
 
-               span{
-                  font-size: 0.6em;
+         .room{
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+            @media only screen and (min-width: $desktop) {
+               width: 32%;
+               
+            }
+   
+            .room_img{
+               height: 225px;
+               width: 100%;
+               background-size: cover;           
+            }
+   
+            &:nth-of-type(2n){
+               .room_img{
+                  background-image: url("../img/random_room1.jpg");
+               }    
+            }
+   
+            &:nth-child(2n-1){
+               .room_img{
+                  background-image: url("../img/random_room2.jpg");
+               }   
+            }
+   
+            .room_body{
+               width: 65%;
+   
+               .icon_list{
+   
+                  ul{
+                     width: 85%;
+                     display: flex;
+                     justify-content: space-between;
+                     padding: 6px 15px;
+                     box-shadow: 10px 10px 31px -12px rgba(0,0,0,0.5);
+                     color: $grey;
+                     font-size: 0.8em;
+                     @media only screen and (min-width: $desktop) {
+                        font-size: 1.2em;
+                     }
+                  }
                }
+   
+               .body_info{
+                  padding: 10px;
+                  @media only screen and (min-width: $desktop) {
+                     font-size: 1.25em;
+                  }
+   
+                  .title{
+                     font-size: 1.1em;
+                     font-family: 'Old Standard TT', serif;
+                     margin: 10px 0;
+                  }
+   
+                  p{
+                     text-align: justify;
+                     font-size: 0.7em;
+                  }
+               }
+               
             }
-
-            .hl{
-               height: 1px;
-               background-color: $grey_light_2;
-               width: 35%;
-               margin-top: 10px;
-               margin-bottom: 10px;
-            }
-
-            .booking{
-               font-size: 0.7em;
-               font-weight: bold;
-               color: $grey_light;
+   
+            .extra_info{
+               width: 34%;
+               display: flex;
+               flex-direction: column;
+               align-items: center;
+               overflow: auto;
+               padding: 40px 10px 0 10px;
+               @media only screen and (min-width: $desktop) {
+                  font-size: 1.2em;
+               }
+               
+               .price{
+                  color: $brown;
+                  font-size: 1.2em;
+                  font-weight: bold;
+   
+                  span{
+                     font-size: 0.6em;
+                  }
+               }
+   
+               .hl{
+                  height: 1px;
+                  background-color: $grey_light_2;
+                  width: 35%;
+                  margin-top: 10px;
+                  margin-bottom: 10px;
+               }
+   
+               .booking{
+                  font-size: 0.7em;
+                  font-weight: bold;
+                  color: $grey_light;
+               }
             }
          }
       }
